--- a/manageNotes/manageNotes.css
+++ b/manageNotes/manageNotes.css
@@ -14,6 +14,12 @@ body {
 	color:white;
 }
 
+#linkToTopics
+{
+	background-color: blue;
+	color:yellow;	
+}
+
 #referencesUser
 {
 	text-align: right;
